Documentation edits made through Mintlify web editor

--- a/docenten-omgeving/code.mdx
+++ b/docenten-omgeving/code.mdx
@@ -1,14 +1,16 @@
 ---
-title: 'Code Blocks'
-description: 'Display inline code and code blocks'
-icon: 'code'
+title: "Code Blocks"
+description: "Display inline code and code blocks"
+icon: "code"
 ---
 
 ## Basic
 
+Inloggen in de docenten omgeving kan via: [beheer.sportfolioapp.nl](https://www.beheer.sportfolioapp.nl)
+
 ### Inline Code
 
-To denote a `word` or `phrase` as code, enclose it in backticks (`).
+To denote a `word` or `phrase` as code, enclose it in backticks (\`).
 
 ```
 To denote a `word` or `phrase` as code, enclose it in backticks (`).
